# base-project-python3.10

./: .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
